[package]
name = "pixset"
version = "0.0.1"
authors = ["Rustcod Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/pixset-rs"
repository = "https://github.com/rustcod/pixset-rs"
description = """
Generates a tileset from a rusttype compatible font
"""

[dependencies]
pixset_derive = { path = "pixset_derive", version = "0.0.1" }
