[package]
name = "pixset"
version = "0.0.5-pre"
authors = ["Rustcod Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/pixset"
repository = "https://github.com/rustcod/pixset"
description = """
Generates a tileset from a RustType compatible font
"""

[dependencies]
pixset_derive = { path = "pixset_derive", version = "0.0.5" }
