[package]
name = "pixset_derive"
version = "0.0.1"
authors = ["Rustcod Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustcod/pixset-rs/pixset_derive"
description = "Macros 1.1 implementation of #[derive(PixLike)]"
include = [
  "Cargo.toml",
  "src/**/*.rs",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
