[package]
name = "pixset_derive"
version = "0.0.2"
authors = ["Rustcod Project Developers"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/pixset_derive/"
homepage = "https://github.com/rustcod/pixset"
repository = "https://github.com/rustcod/pixset"
description = "Macros 1.1 implementation of #[derive(PixLike)]"
include = [
  "Cargo.toml",
  "src/**/*.rs",
  "LICENSE-APACHE",
  "LICENSE-MIT"
]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
